--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
           <div class="footer-widget">
             <div class="widget-about">
               <img src="assets/icons/app-icon-ash-bg.png" alt="" class="img-fluid">
-              <p> Plot# 14 Road# 3, Block# A, Mirpur 11, Harun Mollah Shorok-Main Road, Dhaka, 1216, Bangladesh</p>
+              <p> 25 Topkhana Road, Segunbagicha, Flat no: C-1, Dhaka-1000.</p>
             </div>
           </div>
           <!-- Ends: .footer-widget -->
