--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,24 +8,24 @@
     <div class="carousel-item active">
       <img class="d-block w-100" src="assets/images/slideshow-1.jpg" alt="First slide">
       <div class="carousel-caption">
-        <h3>The ultimate one-stop office food solution</h3>
-        <p>Easily order for your next meeting or event</p>
+        <h3>The ultimate one-stop home food solution</h3>
+        <!--        <p>Easily order for your next meeting or event</p>-->
         <button class="btn btn-danger">Become a home-chef</button>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="assets/images/slideshow-2.jpg" alt="Second slide">
       <div class="carousel-caption">
-        <h3>The ultimate one-stop office food solution</h3>
-        <p>Easily order for your next meeting or event</p>
+        <h3>The ultimate one-stop home food solution</h3>
+        <!--        <p>Easily order for your next meeting or event</p>-->
         <button class="btn btn-danger">Become a Foody</button>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/slideshow-3.jpg" alt="Third slide">
+      <img class="d-block w-100" src="assets/images/rider.jpeg" alt="Third slide">
       <div class="carousel-caption">
-        <h3>The ultimate one-stop office food solution</h3>
-        <p>Easily order for your next meeting or event</p>
+        <h3>The ultimate one-stop home food solution</h3>
+        <!--        <p class="text-primary">Easily order for your next meeting or event</p>-->
         <button class="btn btn-danger">Become a Rider</button>
       </div>
     </div>
@@ -80,25 +80,58 @@
 </section>
 
 <div class="bg-light">
-  <div class="container py-2">
-    <div class="row align-items-center py-2">
-      <div class="col-lg-6">
-        <h1 class="display-4 text-uppercase">Belicious</h1>
-        <p class="lead sb-text-primary">what are you craving for? <span class="text-black-50">The ultimate one-stop office food solution</span></p>
-        <a href="#">Learn about our home-chef</a>
+  <!--  <div class="container py-2">-->
+  <div class="row align-items-center py-2">
+    <div class="col-lg-8">
+      <div class="container py-2 text-align">
+        <h1 class="sb-text-primary">Belicious Story</h1>
+        <p class="lead text-dark">Belicious helps to Re-create childhood’s most-comforting food memories by our
+          home-chef in their kitchen with luscious and savory recipes in your every day’s busy schedule. As solace food,
+          home-cooking brings us comfort by summoning nostalgia for the homes of our youth.</p>
+        <p class="lead text-dark">
+          Wistfulness
+          isn't a sign of achiness to visit the family. Or maybe, it is "a memory of a past encounter envisioned,
+          from the outlook of the present, to be homely". Built upon emotions like familiarity and
+          community, home doesn't just exist as a physical spot yet also as a glorified space inside our
+          childhood memories. Memories of this space are activated by the feeling of comfort brought to the
+          table by home-cooked dishes.
+        </p>
+        <p class="lead sb-text-primary"> Belicious reduces the soreness of staying away from home and Mom’s cooking. You
+          can
+          enjoy
+          a
+          wide variety of belicious meal that is different from every day like your home.</p>
+        <!--        <a href="#">Learn about our home-chef</a>-->
       </div>
-      <div class="col-lg-6 d-none d-lg-block">
-        <img src="assets/images/about-us.png" alt="" class="img-fluid"></div>
     </div>
+    <div class="col-lg-4 d-none d-lg-block">
+      <img src="assets/images/about-us.jpeg" alt="" class="img-fluid"></div>
   </div>
 </div>
+<!--  </div>-->
 
 
 <section class="features section text-center sb-app-c6">
   <div class="container">
-    <h3 class="text-center sb-text-primary mb-4">Our product offerings</h3>
+    <h1 class="text-center sb-text-primary mb-4">Our product offerings</h1>
     <div class="features-inner section-inner">
       <div class="row flex-center">
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Bangladeshi Food</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+
         <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
@@ -114,26 +147,12 @@
             </div>
           </div>
         </div>
+
         <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
               src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Korean</h4>
-            <p class="sb-text-cancel"><b>Dine together</b> with your
-              colleagues, organize your next <b>meeting</b> or set up a big <b
-              >event</b>: we got you covered.</p>
-            <div class="d-flex flex-column">
-              <button class="btn btn-danger">
-                Order now
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="feature col-md-4">
-          <div class="feature-inner">
-            <div class="feature-icon"><img
-              src="assets/images/online-payment.svg"></div>
-            <h4 class="feature-title h3-mobile mb-8">Korean</h4>
+            <h4 class="feature-title h3-mobile mb-8">Pakistani Food</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
               >event</b>: we got you covered.</p>
