--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,7 @@ a.band-logo {
   }
 }
 
+
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+  overflow: hidden;
+}
