--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,48 +1,55 @@
 .carousel-inner {
-  max-height: 360px;
+  //max-height: 360px;
 }
 
 .carousel-caption {
+  bottom: 60px !important;
+
+  h3 {
+    padding: 10px 0;
+  }
+
   p {
     font-size: 20px;
   }
+
 }
 
-@media (min-width: 576px) { // Small devices (landscape phones, 576px and up)
-  .carousel-caption {
-    bottom: 43px !important;
-  }
-}
-
-@media (min-width: 768px) { // Medium devices (tablets, 768px and up)
-  .carousel-caption {
-    bottom: 150px !important;
-  }
-}
-
-@media (min-width: 992px) { // Large devices (desktops, 992px and up)
-  .carousel-caption {
-    bottom: 180px !important;
-  }
-}
-
-@media (min-width: 1000px) {
-  .carousel-caption {
-    bottom: 190px !important;
-  }
-}
-
-@media (min-width: 1085px) {
-  .carousel-caption {
-    bottom: 180px !important;
-  }
-}
-
-@media (min-width: 1200px) { // Extra large devices (large desktops, 1200px and up)
-  .carousel-caption {
-    bottom: 280px !important;
-  }
-}
+//@media (min-width: 576px) { // Small devices (landscape phones, 576px and up)
+//  .carousel-caption {
+//    bottom: 43px !important;
+//  }
+//}
+//
+//@media (min-width: 768px) { // Medium devices (tablets, 768px and up)
+//  .carousel-caption {
+//    bottom: 60px !important;
+//  }
+//}
+//
+//@media (min-width: 992px) { // Large devices (desktops, 992px and up)
+//  .carousel-caption {
+//    bottom: 180px !important;
+//  }
+//}
+//
+//@media (min-width: 1000px) {
+//  .carousel-caption {
+//    bottom: 190px !important;
+//  }
+//}
+//
+//@media (min-width: 1085px) {
+//  .carousel-caption {
+//    bottom: 180px !important;
+//  }
+//}
+//
+//@media (min-width: 1200px) { // Extra large devices (large desktops, 1200px and up)
+//  .carousel-caption {
+//    bottom: 280px !important;
+//  }
+//}
 
 
 .sb-app-c6 {
@@ -107,4 +114,9 @@ section {
 
 .download_from_store img {
   height: 70px;
+}
+
+.text-align {
+  padding-left: 40px;
+  text-align: justify;
 }
