--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,19 +8,14 @@
   h3 {
     padding: 10px 0;
   }
-
-  p {
-    font-size: 20px;
-  }
-
 }
 
 @media (max-width: 500px) { // Small devices (landscape phones, 576px and up)
   .carousel-caption {
     bottom: 0 !important;
 
-    p {
-      font-size: 8px;
+    h3 {
+      font-size: 18px !important;
     }
   }
 }
