--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,6 @@
   background-color: #000000;
 }
 
-body {
-  min-height: 75rem;
-  padding-top: 3.7rem;
-}
-
 h1, h2, .band-logo {
   font-family: 'Yeseva One', cursive;
 }
@@ -47,6 +42,226 @@ a.band-logo {
 }
 
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+article, aside, figcaption, figure, footer, header, hgroup, main, section {
   overflow: hidden;
+}
+
+.public, .secure {
+  min-height: 100vh;
+  padding-top: 3.7rem;
+}
+
+.social-part .fa {
+  padding-right: 20px;
+}
+
+ul li a {
+  margin-right: 20px;
+  font-size: 15px;
+}
+
+.carousel {
+  margin-bottom: 4rem;
+}
+
+.carousel-item {
+  height: 32rem;
+  background-color: #777;
+}
+
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+}
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+}
+
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+footer {
+  ul {
+    padding: 0;
+    margin: 0
+  }
+
+  li {
+    list-style: none
+  }
+
+  a:focus, a:hover {
+    text-decoration: none;
+    -webkit-transition: .3s ease;
+    -o-transition: .3s ease;
+    transition: .3s ease
+  }
+
+  a:focus {
+    outline: 0
+  }
+
+  img {
+    max-width: 100%
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 30px;
+    color: #898b96;
+    font-weight: 300
+  }
+
+  a {
+    color: #5867dd
+  }
+
+}
+
+.go_top {
+  line-height: 40px;
+  cursor: pointer;
+  width: 40px;
+  background: #dc3545;
+  color: #fff;
+  position: fixed;
+  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, .1);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, .1);
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  right: -webkit-calc((100% - 1140px) / 2);
+  right: calc((100% - 1140px) / 2);
+  z-index: 111;
+  bottom: 80px;
+  text-align: center
+}
+
+.go_top span {
+  display: inline-block
+}
+
+.footer-big .footer-widget {
+  margin-bottom: 40px
+}
+
+.footer--light {
+  background: #e7e8ed
+}
+
+.footer-big .footer-menu ul li a, .footer-big p, .footer-big ul li {
+  color: #1e1f27;
+  font-size: 15px;
+}
+
+.footer-menu {
+  padding-left: 48px
+}
+
+.footer-menu ul li a {
+  font-size: 15px;
+  line-height: 32px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.footer-menu ul li a:hover {
+  color: #5867dd
+}
+
+.footer-menu--1 {
+  width: 100%
+}
+
+.footer-widget-title {
+  margin-bottom: 10px;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.mini-footer {
+  background: #192027;
+  text-align: center;
+  padding: 32px 0
+}
+
+.mini-footer p {
+  margin: 0;
+  line-height: 26px;
+  font-size: 15px;
+  color: #999
+}
+
+.mini-footer p a {
+  color: #5867dd
+}
+
+.mini-footer p a:hover {
+  color: #34bfa3
+}
+
+.widget-about img {
+  display: block;
+}
+
+.widget-about p {
+  font-weight: 400;
+}
+
+.widget-about {
+  margin: 23px 0 0 0
+}
+
+.widget-about li {
+  margin-bottom: 10px
+}
+
+.widget-about li:last-child {
+  margin-bottom: 0
+}
+
+.widget-about li span {
+  padding-right: 12px
+}
+
+.widget-about li a {
+  color: #5867dd
+}
+
+@media (max-width: 991px) {
+  .footer-menu {
+    padding-left: 0
+  }
+  .footer-big {
+    ul > li, h4 {
+      text-align: center;
+    }
+  }
+
+  .widget-about img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .widget-about p {
+    text-align: center;
+  }
+}
+
+sub {
+  color: #ff004b;
 }
