--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,9 +60,9 @@ ul li a {
   font-size: 15px;
 }
 
-.carousel {
-  margin-bottom: 4rem;
-}
+//.carousel {
+//  margin-bottom: 4rem;
+//}
 
 .carousel-item {
   height: 32rem;
