--- a/src/app/public/home/home.component.scss
+++ b/src/app/public/home/home.component.scss
@@ -12,7 +12,7 @@
 
 @media (max-width: 500px) { // Small devices (landscape phones, 576px and up)
   .carousel-caption {
-    bottom: 0 !important;
+    bottom: 30px !important;
 
     h3 {
       font-size: 18px !important;
