--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -113,7 +113,7 @@
 
 <section class="features section text-center sb-app-c6">
   <div class="container">
-    <h1 class="text-center sb-text-primary mb-4">Our meals offerings</h1>
+    <h1 class="text-center sb-text-primary mb-4">Our meal offerings</h1>
     <div class="features-inner section-inner">
       <div class="row flex-center">
         <div class="feature col-md-4">
