--- a/src/app/public/about-us/about-us.component.html
+++ b/src/app/public/about-us/about-us.component.html
@@ -6,7 +6,7 @@
         <p class="lead text-muted mb-0">We care about your health and time...</p>
       </div>
       <div class="col-lg-6 d-none d-lg-block"><img
-        src="assets/images/about-us.png" alt="" class="img-fluid"></div>
+        src="assets/images/about-us.jpeg" alt="" class="img-fluid"></div>
     </div>
   </div>
 </div>
