--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/rider.jpeg" alt="Third slide">
+      <img class="d-block w-100" src="assets/images/rider.jpg" alt="Third slide">
       <div class="carousel-caption">
         <h3>The ultimate one-stop home food solution</h3>
         <!--        <p class="text-primary">Easily order for your next meeting or event</p>-->
