added login and registration

--- a/src/app/public/confirm-email/confirm-email.component.html
+++ b/src/app/public/confirm-email/confirm-email.component.html
@@ -72,7 +72,7 @@
         </form>
 
         <div class="form-row pl-3">
-          <a routerLink="/public/forget-password">Forgot Password?</a>
+          <a href="#">Forgot Password?</a>
         </div>
 
         <div class="p-3 text-center">
