--- a/src/app/public/confirm-email/confirm-email.component.html
+++ b/src/app/public/confirm-email/confirm-email.component.html
@@ -1,48 +1,3 @@
-<!--<div class="bg-info container-fluid h-100">-->
-<!--  <div class="row justify-content-center h-100 r-content">-->
-<!--    <div class="col-md-6 text-center r-text">-->
-<!--      <h1 class="text-white mb-3 font-60">Built for developers</h1>-->
-<!--      <p class="mb-4">-->
-<!--        GitHub is a development platform inspired by the way you work. From <a href="/open-source"-->
-<!--                                                                               class="text-white jumbotron-link">open-->
-<!--        source</a> to <a href="/business" class="text-white jumbotron-link">business</a>, you can host and review-->
-<!--        code, manage projects, and build software alongside 40 million&nbsp;developers.-->
-<!--      </p>-->
-
-<!--    </div>-->
-<!--    <div class="col-md-6 r-text">-->
-<!--      <div class="wrapper">-->
-<!--        <div class="icon">-->
-<!--          <img src="assets/images/Octocat.png" class="login-icon" alt="User Icon"/>-->
-<!--        </div>-->
-
-<!--        <form>-->
-<!--          <div class="form-group">-->
-<!--            <label>Email <sub>*</sub></label>-->
-<!--            <input type="text" class="form-control" placeholder="login">-->
-<!--          </div>-->
-<!--          <div class="form-group">-->
-<!--            <label>Password <sub>*</sub></label>-->
-<!--            <input type="password" class="form-control" placeholder="password">-->
-<!--          </div>-->
-<!--          <div class="form-row pull-right">-->
-<!--            <button class="btn btn-primary">Log In</button>-->
-<!--          </div>-->
-<!--        </form>-->
-
-<!--        <div class="form-row">-->
-<!--          <a href="#">Forgot Password?</a>-->
-<!--        </div>-->
-
-
-<!--        <div class="p-3 text-center">-->
-<!--          Don't you have an account? <a [routerLink]="['/auth/join']">Join Now</a>-->
-<!--        </div>-->
-
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
 <section class="py-5">
   <div class="container">
     <div class="row ">
@@ -50,33 +5,27 @@
         <div class=" ">
           <div class="card-body">
             <img src="assets/icons/login.png" style="width:60%">
-            <h2 class="py-3">Login</h2>
-            <p>Login and feel the taste of homemade food.</p>
+            <h2 class="py-3">Account Confirmation</h2>
+            <p>You are just one step away from ordering your next meal.</p>
           </div>
         </div>
       </div>
-      <div class="col-md-6 py-5 border">
-        <h4 class="pb-4">Please fill with your details</h4>
-        <form [formGroup]="loginFrom">
-          <div class="form-group">
-            <label>Email <sub>*</sub></label>
-            <input type="text" class="form-control" placeholder="email" formControlName="email">
+      <div class="col-md-6 py-5 border v-center" *ngIf="data.user.success">
+        <div class="row text-center r-center">
+          <h4 class="pb-4">Congratulation</h4>
+          <p>Your account is verified. Please login with your registered information.</p>
+          <div class="p-3 text-center">
+            Go back to <a [routerLink]="['/public/login']">login</a>
           </div>
-          <div class="form-group">
-            <label>Password <sub>*</sub></label>
-            <input type="password" class="form-control" placeholder="password" formControlName="password">
-          </div>
-          <div class="form-row pull-right">
-            <button class="btn btn-primary" (click)="login()">Log In</button>
-          </div>
-        </form>
-
-        <div class="form-row pl-3">
-          <a href="#">Forgot Password?</a>
         </div>
+      </div>
 
-        <div class="p-3 text-center">
-          Don't you have an account? <a [routerLink]="['/public/join-us']">Join Now</a>
+      <div class="col-md-6 py-5 border v-center" *ngIf="!data.user.success">
+        <div class="row text-center r-center">
+          <h4 class="pb-4">{{data.user.message}}</h4>
+          <div class="p-3 text-center">
+            Go back to <a [routerLink]="['/public/login']">login</a>
+          </div>
         </div>
       </div>
     </div>
