--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -59,15 +59,19 @@
         <h4 class="pb-4">Please fill with your details</h4>
         <form [formGroup]="loginFrom">
           <div class="form-group">
-            <label>Email <sub>*</sub></label>
+            <label>Email <sup>*</sup></label>
             <input type="text" class="form-control" placeholder="email" formControlName="email">
+            <small class="text-danger" *ngIf="loginFrom.get('email').invalid && loginFrom.get('email').touched">Please
+              enter valid email.</small>
           </div>
           <div class="form-group">
-            <label>Password <sub>*</sub></label>
+            <label>Password <sup>*</sup></label>
             <input type="password" class="form-control" placeholder="password" formControlName="password">
+            <small class="text-danger" *ngIf="loginFrom.get('password').invalid && loginFrom.get('password').touched">Please
+              enter strong password.</small>
           </div>
           <div class="form-row pull-right">
-            <button class="btn btn-primary" (click)="login()">Log In</button>
+            <button class="btn btn-primary" (click)="login()" [disabled]="loginFrom.invalid">Log In</button>
           </div>
         </form>
 
