minor align fix and remove #

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -104,7 +104,7 @@
         <!--        <a href="#">Learn about our home-chef</a>-->
       </div>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4 text-center">
       <img src="assets/images/about-us.jpeg" alt="" class="img-fluid"></div>
   </div>
 </div>
