--- a/src/app/public/confirm-email/confirm-email.component.html
+++ b/src/app/public/confirm-email/confirm-email.component.html
@@ -10,22 +10,18 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 py-5 border v-center" *ngIf="data.user.success">
-        <div class="row text-center r-center">
+      <div class="col-md-6 py-5 border r-center" *ngIf="data.user.success">
+        <div class=" text-center">
           <h4 class="pb-4">Congratulation</h4>
           <p>Your account is verified. Please login with your registered information.</p>
-          <div class="p-3 text-center">
-            Go back to <a [routerLink]="['/public/login']">login</a>
-          </div>
+          <p>Go back to <a [routerLink]="['/public/login']">login</a></p>
         </div>
       </div>
 
-      <div class="col-md-6 py-5 border v-center" *ngIf="!data.user.success">
-        <div class="row text-center r-center">
+      <div class="col-md-6 py-5 border r-center" *ngIf="!data.user.success">
+        <div class="text-center">
           <h4 class="pb-4">{{data.user.message}}</h4>
-          <div class="p-3 text-center">
-            Go back to <a [routerLink]="['/public/login']">login</a>
-          </div>
+          <p> Go back to <a [routerLink]="['/public/login']">login</a></p>
         </div>
       </div>
     </div>
