--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -185,13 +185,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="copyright-text">
-              <p>© 2018
-                <a routerLink="/">Belicious</a>. All rights reserved. Created by
-                <a routerLink="/">Belicious.com</a>
-              </p>
-            </div>
-
+            <p>© 2018 <a routerLink="/">Belicious</a>. All rights reserved. Created by
+              <a routerLink="/" class="sb-text-primary">Beliciousbd.com</a>
+            </p>
             <div class="go_top" (click)="onActivate($event)">
               <span class="fa fa-arrow-up"></span>
             </div>
