--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -1,6 +1,6 @@
 <header>
-  <nav class="navbar navbar-expand-sm bg-black fixed-top">
-    <div class="container">
+  <nav class="navbar navbar-expand-sm bg-nav-red fixed-top">
+    <div class="container-fluid">
       <a class="band-logo font-weight-bold"
          routerLink="/secure"><span class="fa fa-themeisle"></span> Belicious</a>
 
@@ -13,10 +13,10 @@
 
       <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link mr-0" routerLink="/public/home" routerLinkActive="active-link">
-              Home</a>
-          </li>
+          <!--          <li class="nav-item">-->
+          <!--            <a class="nav-link mr-0" routerLink="/public/home" routerLinkActive="active-link">-->
+          <!--              Home</a>-->
+          <!--          </li>-->
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="profile"
@@ -39,143 +39,103 @@
   </nav>
 </header>
 
-<main role="main" class="secure">
-
-  <router-outlet></router-outlet>
-
-  <footer class="footer-area footer--light footer-big">
-    <!-- start .container -->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-12">
-          <div class="footer-widget">
-            <div class="widget-about">
-              <img src="assets/icons/app-icon-ash-bg.png" alt="" class="img-fluid">
-              <p> 25 Topkhana Road, Segunbagicha, Flat no: C-1, Dhaka-1000, Bangladesh</p>
-            </div>
-          </div>
-          <!-- Ends: .footer-widget -->
+<!--<main role="main" class="secure">-->
+<main role="main" class="page-wrapper chiller-theme toggled">
+  <nav id="sidebar" class="sidebar-wrapper secure">
+    <div class="sidebar-content">
+      <div class="sidebar-header">
+        <div class="user-pic">
+          <img class="img-responsive img-rounded"
+               src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+               alt="User picture">
         </div>
-        <!-- end /.col-md-4 -->
-        <div class="col-md-3 col-sm-4">
-          <div class="footer-widget">
-            <div class="footer-menu footer-menu--1">
-              <h4 class="footer-widget-title sb-text-primary">Popular Category</h4>
-              <ul>
-                <li>
-                  <a href="#">Indian</a>
-                </li>
-                <li>
-                  <a href="#">Korean</a>
-                </li>
-                <li>
-                  <a href="#">Chinese</a>
-                </li>
-                <li>
-                  <a href="#">Western</a>
-                </li>
-                <li>
-                  <a href="#">Thai & Vietnam</a>
-                </li>
-              </ul>
-            </div>
-            <!-- end /.footer-menu -->
-          </div>
-          <!-- Ends: .footer-widget -->
-        </div>
-        <!-- end /.col-md-3 -->
-
-        <div class="col-md-3 col-sm-4">
-          <div class="footer-widget">
-            <div class="footer-menu">
-              <h4 class="footer-widget-title sb-text-primary">Our Company</h4>
-              <ul>
-                <li>
-                  <a href="#">About Us</a>
-                </li>
-                <li>
-                  <a href="#">How It Works</a>
-                </li>
-                <li>
-                  <a href="#">Affiliates</a>
-                </li>
-                <li>
-                  <a href="#">Testimonials</a>
-                </li>
-                <li>
-                  <a href="#">Contact Us</a>
-                </li>
-                <li>
-                  <a href="#">Plan &amp; Pricing</a>
-                </li>
-                <li>
-                  <a href="#">Blog</a>
-                </li>
-              </ul>
-            </div>
-            <!-- end /.footer-menu -->
-          </div>
-          <!-- Ends: .footer-widget -->
-        </div>
-        <!-- end /.col-lg-3 -->
-
-        <div class="col-md-3 col-sm-4">
-          <div class="footer-widget">
-            <div class="footer-menu p-0">
-              <h4 class="footer-widget-title sb-text-primary">Help Support</h4>
-              <ul class="p-0 m-0">
-                <li>
-                  <a href="#">Support Forum</a>
-                </li>
-                <li>
-                  <a href="#">Terms &amp; Conditions</a>
-                </li>
-                <li>
-                  <a href="#">Support Policy</a>
-                </li>
-                <li>
-                  <a href="#">Refund Policy</a>
-                </li>
-                <li>
-                  <a href="#">FAQs</a>
-                </li>
-                <li>
-                  <a href="#">Buyers Faq</a>
-                </li>
-                <li>
-                  <a href="#">Sellers Faq</a>
-                </li>
-              </ul>
-            </div>
-            <!-- end /.footer-menu -->
-          </div>
-          <!-- Ends: .footer-widget -->
-        </div>
-        <!-- Ends: .col-lg-3 -->
-
-      </div>
-      <!-- end /.row -->
-    </div>
-    <!-- end /.container -->
-
-    <div class="mini-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="copyright-text">
-              <p>© 2018
-                <a routerLink="/">Belicious</a>. All rights reserved. Created by
-                <a routerLink="/">Belicious.com</a>
-              </p>
-            </div>
-
-            <!--            <div class="go_top" (click)="onActivate($event)">-->
-            <!--              <span class="fa fa-arrow-up"></span>-->
-            <!--            </div>-->
-          </div>
+        <div class="user-info">
+          <span class="user-name">Jhon
+            <strong>Smith</strong>
+          </span>
+          <span class="user-role">Administrator</span>
+          <span class="user-status">
+            <i class="fa fa-circle"></i>
+            <span>Online</span>
+          </span>
         </div>
       </div>
+      <div class="sidebar-menu">
+        <ul>
+          <li class="header-menu">
+            <span>General</span>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="#">
+              <i class="fa fa-dashboard"></i>
+              <span>Dashboard</span>
+              <!--              <span class="badge badge-pill badge-warning">New</span>-->
+            </a>
+          </li>
+          <li class="sidebar-dropdown">
+            <a href="#">
+              <i class="fa fa-shopping-cart"></i>
+              <span>E-commerce</span>
+              <span class="badge badge-pill badge-danger">3</span>
+            </a>
+          </li>
+          <li class="header-menu">
+            <span>Extra</span>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-book"></i>
+              <span>Documentation</span>
+              <!--              <span class="badge badge-pill badge-primary">Beta</span>-->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-calendar"></i>
+              <span>Calendar</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa fa-folder"></i>
+              <span>Examples</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- sidebar-menu  -->
     </div>
-  </footer>
+    <!-- sidebar-content  -->
+    <div class="sidebar-footer">
+      <a href="#">
+        <i class="fa fa-bell"></i>
+        <span class="badge badge-pill badge-warning notification">3</span>
+      </a>
+      <a href="#">
+        <i class="fa fa-envelope"></i>
+        <span class="badge badge-pill badge-success notification">7</span>
+      </a>
+      <a href="#">
+        <i class="fa fa-cog"></i>
+        <!--        <span class="badge-sonar"></span>-->
+      </a>
+      <a href="#">
+        <i class="fa fa-power-off"></i>
+      </a>
+    </div>
+  </nav>
+  <div class="page-content secure">
+    <div class="container-fluid">
+      <router-outlet></router-outlet>
+    </div>
+    <footer class="bg-light footer-big">
+      <div class="copyright-text">
+        <p>© 2018
+          <a routerLink="/">Belicious</a>. All rights reserved. Created by
+          <a routerLink="/" class="sb-text-primary">Belicious.com</a>
+        </p>
+      </div>
+    </footer>
+  </div>
 </main>
 
