added nav btn on collapse

--- a/src/assets/scss/secure.scss
+++ b/src/assets/scss/secure.scss
@@ -140,11 +140,12 @@ body {
 
 #show-sidebar {
   position: fixed;
-  left: 0;
-  top: 10px;
+  left: 0 !important;
+  top: 63px;
   border-radius: 0 4px 4px 0px;
   width: 35px;
   transition-delay: 0.3s;
+  z-index: 1;
 }
 
 .page-wrapper.toggled #show-sidebar {
