--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -41,6 +41,10 @@
 
 <!--<main role="main" class="secure">-->
 <main role="main" class="page-wrapper chiller-theme toggled">
+  <a id="show-sidebar" class="btn btn-sm btn-dark">
+    <i class="fa fa-bars text-white"></i>
+  </a>
+
   <nav id="sidebar" class="sidebar-wrapper secure">
     <div class="sidebar-content">
       <div class="sidebar-header">
