--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -50,14 +50,14 @@
       <div class="sidebar-header">
         <div class="user-pic">
           <img class="img-responsive img-rounded"
-               src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
+               src="assets/icons/user.jpg"
                alt="User picture">
         </div>
         <div class="user-info">
-          <span class="user-name">Jhon
-            <strong>Smith</strong>
+          <span class="user-name"> {{user.first_name}}
+            <strong>{{user.last_name}}</strong>
           </span>
-          <span class="user-role">Administrator</span>
+          <span class="user-role">{{user.role}}</span>
           <span class="user-status">
             <i class="fa fa-circle"></i>
             <span>Online</span>
