--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -1,1 +1,101 @@
-<p>dashboard works!</p>
+<section class="features section text-center sb-app-c6">
+  <div class="container">
+    <h1 class="text-center sb-text-primary mb-4">Our meal offerings</h1>
+    <div class="features-inner section-inner">
+      <div class="row flex-center">
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Bangladeshi Food</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Indian Food</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Pakistani Food</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Western</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Thai and Vietnam</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="feature col-md-4">
+          <div class="feature-inner">
+            <div class="feature-icon"><img
+              src="assets/images/online-payment.svg"></div>
+            <h4 class="feature-title h3-mobile mb-8">Arabian</h4>
+            <p class="sb-text-cancel"><b>Dine together</b> with your
+              colleagues, organize your next <b>meeting</b> or set up a big <b
+              >event</b>: we got you covered.</p>
+            <div class="d-flex flex-column">
+              <button class="btn btn-danger">
+                Order now
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
