--- a/src/assets/scss/secure.scss
+++ b/src/assets/scss/secure.scss
@@ -386,7 +386,9 @@ body {
   //padding-top: 20px;
   > div {
     padding: 20px 40px;
-    height: calc(100vh - 90px)
+    height: calc(100vh - 90px);
+    overflow-y: scroll;
+
   }
 
   overflow-x: hidden;
