--- a/src/assets/scss/secure.scss
+++ b/src/assets/scss/secure.scss
@@ -319,7 +319,7 @@ body {
       display: none;
     }
 
-    .sidebar-dropdown.active > a:after {
+    .sidebar-dropdown > a.active:after {
       transform: rotate(90deg);
       right: 17px;
     }
@@ -470,8 +470,8 @@ body {
 
   .sidebar-wrapper {
     .sidebar-menu {
-      ul li:hover > a, .sidebar-dropdown.active > a {
-        color: #b8bfce;
+      ul li:hover > a, .sidebar-dropdown a.active {
+        color: #16c7ff;
       }
     }
 
@@ -501,7 +501,7 @@ body {
     }
 
     .sidebar-menu {
-      .sidebar-dropdown.active a i {
+      .sidebar-dropdown a.active i {
         color: #16c7ff;
         text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
       }
