fix css issue on nav

--- a/src/app/public/join/join.component.html
+++ b/src/app/public/join/join.component.html
@@ -1,7 +1,7 @@
 <section class="py-5">
   <div class="container">
     <div class="row ">
-      <div class="col-md-4 py-5 bg-info text-white text-center ">
+      <div class="col-md-4 py-5 bg-info text-white text-center  d-none d-md-block">
         <div class=" ">
           <div class="card-body">
             <img src="assets/icons/login.png" style="width:60%">
