--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,52 +1,7 @@
-<!--<div class="bg-info container-fluid h-100">-->
-<!--  <div class="row justify-content-center h-100 r-content">-->
-<!--    <div class="col-md-6 text-center r-text">-->
-<!--      <h1 class="text-white mb-3 font-60">Built for developers</h1>-->
-<!--      <p class="mb-4">-->
-<!--        GitHub is a development platform inspired by the way you work. From <a href="/open-source"-->
-<!--                                                                               class="text-white jumbotron-link">open-->
-<!--        source</a> to <a href="/business" class="text-white jumbotron-link">business</a>, you can host and review-->
-<!--        code, manage projects, and build software alongside 40 million&nbsp;developers.-->
-<!--      </p>-->
-
-<!--    </div>-->
-<!--    <div class="col-md-6 r-text">-->
-<!--      <div class="wrapper">-->
-<!--        <div class="icon">-->
-<!--          <img src="assets/images/Octocat.png" class="login-icon" alt="User Icon"/>-->
-<!--        </div>-->
-
-<!--        <form>-->
-<!--          <div class="form-group">-->
-<!--            <label>Email <sub>*</sub></label>-->
-<!--            <input type="text" class="form-control" placeholder="login">-->
-<!--          </div>-->
-<!--          <div class="form-group">-->
-<!--            <label>Password <sub>*</sub></label>-->
-<!--            <input type="password" class="form-control" placeholder="password">-->
-<!--          </div>-->
-<!--          <div class="form-row pull-right">-->
-<!--            <button class="btn btn-primary">Log In</button>-->
-<!--          </div>-->
-<!--        </form>-->
-
-<!--        <div class="form-row">-->
-<!--          <a href="#">Forgot Password?</a>-->
-<!--        </div>-->
-
-
-<!--        <div class="p-3 text-center">-->
-<!--          Don't you have an account? <a [routerLink]="['/auth/join']">Join Now</a>-->
-<!--        </div>-->
-
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
 <section class="py-5">
   <div class="container">
     <div class="row ">
-      <div class="col-md-6 py-5 bg-info text-white text-center ">
+      <div class="col-md-6 py-5 bg-info text-white text-center d-none d-md-block">
         <div class=" ">
           <div class="card-body">
             <img src="assets/icons/login.png" style="width:60%">
