--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-sm bg-black fixed-top">
+  <nav class="navbar navbar-expand-md bg-black fixed-top">
     <div class="container">
       <a class="band-logo font-weight-bold" routerLink="/public/home">
         <span class="fa fa-themeisle"></span>
