--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -21,8 +21,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="profile"
                role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false">or
-              {{user.first_name}} {{user.last_name}}
+               aria-haspopup="true" aria-expanded="false">{{user.first_name}} {{user.last_name}}
             </a>
             <div class="dropdown-menu r-menu" aria-labelledby="profile">
               <a class="dropdown-item" routerLink="/secure/profile">Profile</a>
