--- a/src/styles.scss
+++ b/src/styles.scss
@@ -304,7 +304,7 @@ label {
     position: relative;
     height: 100%;
     background: #fff;
-    padding: 48px 24px;
+    padding: 48px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -327,4 +327,10 @@ label {
       mix-blend-mode: multiply;
     }
   }
+}
+
+.btn-default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
 }
